src/test/resources/valid_programs/for_stm_simple.notc
void main() {
    int i;
    for (i = 0; i < 5; ++i)
        printInt(i);

    for (;;)
        return;
}
