src/test/resources/semantic_errors/scoping_return_same_name.notc
void main() {
}

int fun() {
    int returnValue = 0;
    {
        string returnValue = "hej";
        return returnValue;
    }
    return returnValue;
}
